validators/performance/testdata/inference/http-route-gateway-epp.yaml
# Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${DEPLOYMENT_NAME}-route
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: inference-gateway
      namespace: agentgateway-system
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: ${DEPLOYMENT_NAME}-pool
          namespace: ${NAMESPACE}
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
